# Touchpoint

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  glama.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
tests/: _test_app.py  conftest.py  test_actions.py  test_cdp.py  test_config.py  test_discovery.py  test_elements.py  test_find.py  test_format.py  test_input.py  test_matcher.py  test_scale.py  test_screenshot.py  test_wait.py
touchpoint/: __init__.py
touchpoint/backends/: base.py
touchpoint/backends/cdp/: __init__.py  cdp.py
touchpoint/backends/linux/: atspi.py
touchpoint/backends/linux/x11/: input.py
touchpoint/backends/macos/: __init__.py  ax.py  input.py
touchpoint/backends/windows/: __init__.py  input.py  uia.py
touchpoint/core/: element.py  exceptions.py  types.py  window.py
touchpoint/format/: formatter.py
touchpoint/matching/: matcher.py
touchpoint/mcp/: __init__.py  server.py
touchpoint/utils/: scale.py  screenshot.py
